      - When selecting an annotated method, if the request has an
        available entity, now the Java methods without an input
        parameter are rejected.
      - ConverterService don't return non concrete media types anymore.
      - Fixed internal connectors in order to ensure that connections 
        are closed when the controller is shutdown.
    - Enhancements
        - Improved performance of the Reference#isValid(char) method.
          Suggested by Guillaume Maillard.
    - Misc
      - Component#main() now accepts related XML configuration file 
        paths. Contributed by Alex Milowski.
      - Updated jSSLutils to version 1.0.5.
      - Clarified Javadocs of the WADL extension.
      - Reduced max threads default value from "255" to "10".
        Suggested by Tim Peierls.
      - Improved precision of variants detection of annotated methods.
        Positive impact on WADL descriptions.
      - WadlApplication is now capable of describing more precisely
        ServerResource subclasses and not just WadlServerResource ones. 
        Request and response representation variants are described.

- 2.0 Release Candidate 4 (2010-06-01)
    - API changes
      - Changed character oriented subclasses of OutputRepresentation
        to extend WriterRepresentation instead for consistent character
        set handling.
      - StringRepresentation now derives from CharacterRepresentation.
      - WriterRepresentation now uses HTTP's default character set when
        no one is provided (ISO 8859-1).
      - Added missing ServerResource#abort() method.
        Reported by Tal Liron.
      - Deprecated the GwtShellServletWrapper as the hosted mode has 
        been removed in GWT 2.0. Reported by Rob Heittman.
      - Fixed design of the Engine class to allow custom subclasses to 
        be registered without systematically creating a new 
        EngineClassLoader. The classLoader and userClassLoader 